tools/architecture/validate-source-imports/tests/fixtures/invalid/relative-cross-package-import/packages/pkg-a/src/index.ts
import { internalThing } from "../../pkg-b/src/internal";
export const packageName = "@platform/feature-workflow";
